# Django-DRF_auth_profile

./: .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml
core/: settings.py  urls.py
profile_api/: models.py  serializers.py  urls.py  views.py
profile_api/migrations/: 0001_initial.py  0002_alter_user_phone_number.py  0003_user_is_active.py  0004_alter_user_friend_invite_code.py
profile_front/: apps.py  urls.py  views.py
profile_front/static/profile_front/css/: styles.css
profile_front/templates/profile_front/: code.html  profile.html  sign_in.html
